tests/rosetta/out/Smalltalk/active-directory-connect.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| connect main client |
connect := [:client | ((((client at: 'Host') ~= '')) and: [(((client at: 'Port') > 0))]). ].
main := [ client := Dictionary from:{'Base'->'dc=example,dc=com'. 'Host'->'ldap.example.com'. 'Port'->389. 'UseSSL'->false. 'BindDN'->'uid=readonlyuser,ou=People,dc=example,dc=com'. 'BindPassword'->'readonlypassword'. 'UserFilter'->'(uid=%s)'. 'GroupFilter'->'(memberUid=%s)'. 'Attributes'->{'givenName'. 'sn'. 'mail'. 'uid'}}.
(connect value: client) ifTrue: [
Transcript show: ((('Connected to ') + client.Host)) printString; cr.
] ifFalse: [
Transcript show: 'Failed to connect'; cr.
]. ].
main value.
